@@ -48,6 +48,7 @@ busy indicator.
 +Fix display inconsistencies in recently opened file menu.
 +Fix some issues with the binary installer and uninstaller on Windows Vista/7
 +Fix behavior of change word command to better emulate vi.
++Fix error handling in purging of old log files.
 
 #-----------------------------------------------------------------------------#
 VERSION 0.6.00
